--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Portifolio</title>
 </head>
 <body>
     <h1>Olá Mundo</h1>
+    <p>Sejam bem vindos</p>
 </body>
 </html>
