--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="Imagens/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Imagens/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Imagens/favicon-16x16.png">  
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Portfolio</title>
+    <style>
+        body
+        {
+            background-color: rgb(85, 56, 112);
+        }
+    </style>
 </head>
 <body>
-    <h1>Olá Mundo</h1>
-    <p>Sejam bem vindos</p>
+    <div class="container">
+    <header>
+        <div class="img-wrapper">
+            <img src="Imagens/bg.jpg" alt="">
+      </div>
+        <h1>Front-End Developer & Back-End Developer</h1>
+        <p>Daniiel Antonio Appi</p>
+        <button>Saiba mais</button>
+    </header>
+    </div>
 </body>
 </html>
