Estrutura inicial dos arquivos

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
         }
     </style>
 </head>
-<body>
+<body>  
     <div class="container">
     <header>
         <div class="img-wrapper">
             <img src="Imagens/bg.jpg" alt="">
       </div>
-        <h1>Front-End Developer & Back-End Developer</h1>
-        <p>Daniiel Antonio Appi</p>
+      <div class="banner">
+        <h1>Front-End Developer &</h1>
+        <h2>Back-End Developer</h2>
+        <p>Daniel Antonio Appi</p>
         <button>Saiba mais</button>
+    </div>
     </header>
     </div>
 </body>
