Estrutura incial dos arquivos

--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Imagens/favicon-16x16.png">  
     <link rel="manifest" href="/site.webmanifest">
-    <title>Portfolio</title>
+    <title>Daniel Appi</title>
     <style>
         body
         {
-            background-color: rgb(85, 56, 112);
+            background-color: rgb(196, 196, 196);
         }
     </style>
 </head>
 <body>  
     <div class="container">
+        
+    <div class="Menuhamburger">
+        <div class="line" id="line1"></div>
+        <div class="line" id="line2"></div>
+        <div class="line" id="line3"></div>
+    </div>
+
+    
     <header>
         <div class="img-wrapper">
             <img src="Imagens/bg.jpg" alt="">
@@ -26,10 +34,31 @@
       <div class="banner">
         <h1>Front-End Developer &</h1>
         <h2>Back-End Developer</h2>
-        <p>Daniel Antonio Appi</p>
+        <p>Daniel Appi</p>
         <button>Saiba mais</button>
     </div>
     </header>
+
+    <div class="sidebar">
+        <nav>
+            <ul class="menu">
+                <li class="menu-item"><a href="" class="menu-link">Home</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Sobre</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Portfólio</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Blog</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Contato</a></li>
+            </ul>
+        </nav>
+
+        <div class="social-media">
+            <a href=""><i class="fab fa-facebook-f"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-github"></i></a>
+        </div>
+    </div>
+
+
+
     </div>
 </body>
 </html>
